[package]
name = "rust_jam_chicken_dog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bracket-random = "0.8"
bracket-pathfinding = { version = "0.8", default-features = false }

[profile.release]
strip = "debuginfo"
lto = "thin"
